# m_mh24

./: LICENSE  README.md
m_mh24/m_mh24/: CMakeLists.txt  package.xml
m_mh24/m_mh24/config/: gazebo_pid_gains.yaml  joint_names_m_mh24.yaml  joint_state_controller.yaml  rotating_kinect_control.yaml
m_mh24/m_mh24/launch/: display.launch  gazebo.launch  m_mh24_gazebo_with_workpiece.launch  m_mh24_gazebo_with_workpiece_kinect.launch  m_mh24_upload.launch
m_mh24/m_mh24/meshes/: 01_link.STL  02_link.STL  03_link.STL  04_link.STL  05_link.STL  06_link.STL  base_link.STL  drawer.STL
m_mh24/m_mh24/meshes/workpiece/: model.config  model.sdf
m_mh24/m_mh24/urdf/: calibration_properties.urdf.xacro  kinect.urdf.xacro  kinect_gazebo_plugin.urdf.xacro  m_mh24.csv  m_mh24.urdf  rotating_kinect.urdf.xacro  workpiece.urdf
m_mh24/m_mh24/worlds/: m_mh24.world
m_mh24/m_mh24_gazebo/: CMakeLists.txt  package.xml
m_mh24/m_mh24_gazebo/config/: joint_trajectory_controller.yaml
m_mh24/m_mh24_gazebo/launch/: m_mh24_bringup_moveit.launch  m_mh24_bringup_moveit_kinect.launch
m_mh24/m_mh24_moveit_config/: CMakeLists.txt  package.xml
m_mh24/m_mh24_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  m_mh24.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect.yaml
m_mh24/m_mh24_moveit_config/launch/: chomp_planning_pipeline.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch  gazebo.launch  joystick_control.launch  m_mh24_moveit_controller_manager.launch  m_mh24_moveit_sensor_manager.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  warehouse.launch  (+1 more)
m_mh24/rotating_kinect_teleop/: mainpage.dox  manifest.xml
(+2 files in other folders)
