<package format="2">>
  <name>m_mh24</name>
  <version>1.2.4</version>
  <description>
    <p>URDF Description package for m_mh24</p>
    <p>This package contains configuration data, 3D models and launch files
for m_mh24 robot</p>
  </description>
  <author>lindaqqiu</author>
  <maintainer email="lindaqqiu@sjtu.edu.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
