<?xml version="1.0"?>
<package format="2">
  <name>m_mh24_gazebo</name>
  <version>0.0.0</version>
  <description>Launch m_mh24 robot with/without the workpiece in an empty Gazebo world.</description>

  <maintainer email="lindaqqiu@sjtu.edu.cn">lindaqqiu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>m_mh24_moveit_config</exec_depend>
  <exec_depend>m_mh24</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>actionlib</test_depend>
  <test_depend>trajectory_msgs</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
